show task, seeds

--- a/app/views/tasks/_task.html.slim
+++ b/app/views/tasks/_task.html.slim
@@ -1,10 +1,11 @@
 .card
   .card-header
-    | #{task.title}
+    span.badge.rounded-pill.bg-primary label
+    span.badge.rounded-pill.bg-success label2
+    span.badge.rounded-pill.bg-warning.text-dark blocked
   .card-body
     .task-card-content
-      span.badge.rounded-pill.bg-primary label
-      p.lead With supporting text below as a natural lead-in to additional content.
-      a.btn.btn-primary href="#"  Open
+      p.lead #{task.title}
+      = link_to 'Open', task_path(task), class: 'btn btn-primary'
     .task-card-options
       button.btn.btn-primary type="button"  Primary
