--- a/app/assets/stylesheets/task.css.sass
+++ b/app/assets/stylesheets/task.css.sass
@@ -1,10 +1,7 @@
 .task-card-content
   width: 75%
   display: inline-block
-  span
-    font-size: 1rem
-    margin-bottom: 1rem
-    margin-top: 0
+
 
 .task-card-options
   width: 25%
@@ -15,3 +12,9 @@
 
 .card
   margin-top: 0.75rem
+
+.card-header
+  span
+    font-size: 1rem
+    margin-bottom: 1rem
+    margin: 0.5rem
