--- a/app/assets/stylesheets/layout.css.sass
+++ b/app/assets/stylesheets/layout.css.sass
@@ -29,3 +29,9 @@ body.sb-sidenav-toggled #wrapper #sidebar-wrapper
   #page-content-wrapper
     min-width: 0
     width: 100%
+
+.form-container
+  width: 25rem
+  height: 40rem
+  margin: auto
+  margin-top: 10rem
