--- a/app/views/partials/_sidebar.html.slim
+++ b/app/views/partials/_sidebar.html.slim
@@ -1,9 +1,8 @@
 #sidebar-wrapper.border-end.bg-white
-  .sidebar-heading.border-bottom.bg-light Start Bootstrap
+  .sidebar-heading.border-bottom.bg-light My Task Tracker
   .list-group.list-group-flush
     a.list-group-item.list-group-item-action.list-group-item-light.p-3 href="#!"  Dashboard
-    a.list-group-item.list-group-item-action.list-group-item-light.p-3 href="#!"  Shortcuts
-    a.list-group-item.list-group-item-action.list-group-item-light.p-3 href="#!"  Overview
+    a.list-group-item.list-group-item-action.list-group-item-light.p-3 href="#!"  Tasks
+    a.list-group-item.list-group-item-action.list-group-item-light.p-3 href="#!"  Peofile
     a.list-group-item.list-group-item-action.list-group-item-light.p-3 href="#!"  Events
-    a.list-group-item.list-group-item-action.list-group-item-light.p-3 href="#!"  Profile
     a.list-group-item.list-group-item-action.list-group-item-light.p-3 href="#!"  Status
