--- a/app/views/partials/_topbar.html.slim
+++ b/app/views/partials/_topbar.html.slim
@@ -1,6 +1,6 @@
 nav.navbar.navbar-expand-lg.navbar-light.bg-light.border-bottom
       .container-fluid
-        button#sidebarToggle.btn.btn-primary Toggle Menu
+        = link_to "New Task", new_task_path, data: { turbo_frame: 'modal' }, class: 'btn btn-primary'
         button.navbar-toggler aria-controls="navbarSupportedContent" aria-expanded="false" aria-label=("Toggle navigation") data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button"
           span.navbar-toggler-icon
         #navbarSupportedContent.collapse.navbar-collapse
